...
                            }
                        ))
                    }
                }
            }
        }
        .navigationTitle("レイヤ設定")
    }
}

private struct CategorySettingsView: View {
    @EnvironmentObject var settings: Settings
    @EnvironmentObject var airspaceManager: AirspaceManager
...
